--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 h1 {
-  color: red,
+  color: red;
+  font-size: 40px;
+  text-align: center;
+  text-shadow: none;
+  padding-left: 150px;
 }
 
 .logo {
